<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="?android:colorPrimary"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/text_limiter"
            android:textColor="?android:textColor"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular"
            android:text="@string/select_the_number_of_lines_to_be_displayed_for_each_note"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/one_line"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/two_lines"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/three_lines"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/four_lines"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/five_lines"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>