<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?android:colorPrimary"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/note_statistics"
            android:textColor="?android:textColor"
            android:layout_marginTop="8dp"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/bold"
                android:text="@string/creation_date"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/creation_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/today"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/category"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/bold"
                android:text="@string/not_specified"
                android:textColor="@color/color3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/category_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/bold"
                android:text="@string/not_specified"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/category_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/_1"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/word_count"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/word_count_text_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/_0"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/character_count"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/char_count_text_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/_0"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>