<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="?android:colorPrimary"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/choose_theme"
            android:textColor="?android:textColor"
            android:layout_marginTop="8dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:text="@string/this_theme_will_be_applied_to_the_entire_application"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/dark"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/light"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:layout_marginBottom="8dp"
            android:id="@+id/amoled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bold"
            android:text="@string/amoled"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.v7.widget.CardView>