<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:colorPrimary"
    tools:context="com.shahid.nid.Activties.SignInActivity">

    <LinearLayout
        android:id="@+id/pin_authentication_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:fontFamily="@font/bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your"
            android:textColor="?android:textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="?android:textColor"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/app_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/password"
            android:textColorHint="?android:textColorSecondary"
            android:inputType="numberPassword"
            android:maxLength="5"
            android:textColor="?android:textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fingerprint_authentication_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:fontFamily="@font/bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint"
            android:textColor="?android:textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:fontFamily="@font/bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication"
            android:textColor="?android:textColor"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/instructions"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/fingerprint"

            android:tint="@color/dividerColor" />
    </LinearLayout>
</RelativeLayout>
